# flake-templates

./: .envrc  .gitignore  Gemfile  README.md  build-maven-repo.nix  flake.nix  hello-world.cabal
.githooks/: pre-commit
assets/: package-lock.json
config/: config.exs
elixir/: .gitignore  flake.nix
haskell/: .gitignore  README.md  flake.nix  hello-world.cabal
haskell/.githooks/: pre-commit
jekyll/: README.md  flake.nix  gemset.nix
jekyll/_posts/: 2022-03-01-welcome-to-jekyll.markdown
lib/hello_world_web/: router.ex
lib/hello_world_web/templates/layout/: root.html.leex
maven/: dependencies-lock.json  flake.nix  pom.xml
phoenix/: .gitignore  README.md  flake.nix  mix.exs
phoenix/lib/: hello_world_web.ex
phoenix/lib/hello_world_web/: endpoint.ex  router.ex
phoenix/lib/hello_world_web/live/: page_live.ex
postgresql/: flake.nix
python/: flake.nix
python/.githooks/: pre-commit
python/hello-world/: pyproject.toml
python/hello-world/hello_world/: __init__.py
rust/: .gitignore  README.md  flake.nix
rust/.githooks/: pre-commit
src/main/java/com/mycompany/: HelloWorld.java
src/test/java/com/mycompany/: HelloWorldTest.java
test/hello_world_web/live/: page_live_test.exs
typescript/: .gitignore  tsconfig.json
