  cabal-version:      3.0
  name:               hello-world
  version:            0.1.0.0

  synopsis:           The Corner programming language.
  -- A longer description of the package.
  -- description:

  -- license:
  author:             <author>
  maintainer:         <author>@<email>.com
  bug-reports:        https://github.com/<owner>/<repo>/issues

  -- A copyright notice.
  -- copyright:
  -- category:
  extra-source-files:
    CHANGELOG.md
    README.md

common hello-world-common
  default-language:   Haskell2010
  default-extensions: AllowAmbiguousTypes,
                      BlockArguments,
                      DataKinds,
                      DefaultSignatures,
                      DeriveGeneric,
                      DeriveTraversable,
                      ExplicitForAll,
                      FlexibleContexts,
                      FlexibleInstances,
                      FunctionalDependencies,
                      GADTs,
                      GeneralizedNewtypeDeriving,
                      KindSignatures,
                      LambdaCase,
                      MultiParamTypeClasses,
                      MultiWayIf,
                      NamedFieldPuns,
                      OverloadedStrings,
                      PolyKinds,
                      QuasiQuotes,
                      RankNTypes,
                      RecordWildCards,
                      ScopedTypeVariables,
                      StandaloneDeriving,
                      TemplateHaskell,
                      TupleSections,
                      TypeApplications,
                      TypeFamilies,
                      TypeOperators,
                      ViewPatterns
  build-depends:      base,
                      relude
  mixins:             base hiding (Prelude),
                      relude (Relude as Prelude),
                      relude
  ghc-options:        -Wall

executable hello-world
  import:             hello-world-common
  main-is:            Main.hs
  hs-source-dirs:     app
